# GravitySimulator

./: CMakeLists.txt  README.md
src/: Geometry.cpp  Geometry.hpp  GridRenderer.cpp  GridRenderer.hpp  ImGuiHandler.cpp  ImGuiHandler.hpp  Types.cpp  Types.hpp  VulkanApp.cpp  VulkanApp.hpp  main.cpp
src/shaders/: flat_grid.comp  grid.vert  hyperbolic_grid.comp  spherical_grid.comp
src/utils/: ShaderLoader.cpp  ShaderLoader.hpp
